fix: add gap to filters container for improved spacing

--- a/src/styles/admin/page.module.css
+++ b/src/styles/admin/page.module.css
@@ -17,6 +17,7 @@
     justify-content: space-between;
 
     flex-wrap: wrap;
+    gap: .5rem;
 }
 
 .main_name_container svg {
